--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,23 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Bartech</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="src/assets/img/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="src/assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="src/assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="src/assets/img/favicon-16x16.png">
+  <link rel="manifest" href="src/assets/img/site.webmanifest">
+  <link rel="mask-icon" href="src/assets/img/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
